src/objects/Cheque__c.object
<CustomObject>
    <fields>
        <fullName>Banco__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Banco</label>
        <referenceTo>Banco__c</referenceTo>
        <relationshipLabel>Cheques</relationshipLabel>
        <relationshipName>Cheques</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Estado__c</fullName>
        <label>Estado</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Emitido</fullName>
                    <default>true</default>
                    <label>Emitido</label>
                </value>
                <value>
                    <fullName>Entregado</fullName>
                </value>
                <value>
                    <fullName>Cobrado</fullName>
                </value>
                <value>
                    <fullName>Anulado</fullName>
                </value>
                <value>
                    <fullName>Devuelto</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fecha_de_vencimiento__c</fullName>
        <label>Fecha de vencimiento</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_emision__c</fullName>
        <label>Fecha emision</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Importe__c</fullName>
        <label>Importe</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Cheque</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <nameField>
        <label>Nombre de Cheque</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cheques</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>